--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'net.hockeyapp.android:HockeySDK:5.2.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
 }
 
 android {
