--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ local.properties
 gradle.properties
 google-services.json
 
+
+TMessagesProj/.cxx/
 TMessagesProj/src/main/java/org/telebon/messenger/BuildVars.java
